--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,61 +1,29 @@
 experiences:
 
-- place: "University of Washington"
-  time: "2023 - now"
-  title: "Assistant Professor"
-  subtitle: "Information School"
-  category: "work"
-
-- place: "Stanford"
-  time: "2020 - 2023"
-  title: "Postdoc"
-  subtitle: "MS&E"
-  category: "work"
-
-- place: "MIT"
-  time: "2014 - 2020"
+- place: "Max-Planck Institute for Software Systems"
+  time: "2021 - Now"
   title: "Ph.D. Student"
-  subtitle: "Media Lab, Laboratory for Social Machines"
   category: "school"
 
-- place: "Facebook"
-  time: "Summer 2019"
+- place: "Oracle Labs Switzerland"
+  time: "June-Nov 2020"
   title: "Research Scientist, Intern"
-  subtitle: "Core Data Science"
   category: "work"
 
-- place: "LinkedIn"
-  time: "Summer 2016"
-  title: "Research Scientist, Intern"
-  subtitle: "Experimentation Group"
-  category: "work"
-
-- place: "Amazon"
-  time: "Summer 2014"
-  title: "Machine Learning Scientist, Intern"
-  subtitle: "Scalable Machine Learning Group"
-  category: "work"
-
-- place: "Yahoo! Labs"
-  time: "Feb-Aug 2013"
-  title: "Research Scientist, Intern"
-  subtitle: "Social Media Engagement Group"
-  category: "work"
-
-- place: "EM-DMKM"
-  time: "Sep 2011 – Aug 2013"
+- place: "ETH Zurich, Switzerland"
+  time: "2018 - 2020"
   title: "M.Sc. Student"
-  subtitle: "Masters in Data Mining and Knowledge Management <br/> Year 1: University Pierre et Marie Curie <br/> Year 2: Universitat Politecnica de Catalunya <br/>"
+  subtitle: "Computing Science"
   category: "school"
 
-- place: "Jozef Stefan Institute"
-  time: "Jan-Aug 2011"
+- place: "POSTECH, South Korea"
+  time: "Feb-June 2017"
   title: "Research Assistant"
   subtitle: "Department of Knowledge Technologies"
   category: "work"
 
-- place: "Staffordshire University"
-  time: "2007 - 2010"
+- place: "ETH Zurich, Switzerland"
+  time: "2014 - 2018"
   title: "B.Sc. Student"
-  subtitle: "Computing Science <br/> First Class Honours"
+  subtitle: "Computing Science"
   category: "school"
