--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,10 +1,10 @@
-name: "Martin Saveski"
-title: "Assistant Professor, University of Washington"
-email: "msaveski [AT] uw.edu"
-profile_pic: "/assets/profile-pics/SU_small.jpg"
-bsky: "https://bsky.app/profile/msaveski.bsky.social"
-twitter: "https://twitter.com/msaveski"
-linkedin: "https://www.linkedin.com/in/msaveski"
-github: "https://github.com/msaveski"
-google_scholar: "https://scholar.google.com/citations?user=M3D870YAAAAJ&hl=en"
-google_analystics_tracking_id: 'UA-46778883-1'
+name: "Nina Corvelo Benz"
+title: "Ph.D. Student"
+email: "ninacobe [AT] mpi-sws.org"
+profile_pic: "/assets/profile-pics/foto.jpg"
+# bsky: "https://bsky.app/profile/msaveski.bsky.social"
+# twitter: "https://twitter.com/msaveski"
+linkedin: "https://www.linkedin.com/in/nina-corvelo-benz"
+github: "https://github.com/ninacobe"
+google_scholar: "https://scholar.google.com/citations?user=7hmCYJYAAAAJ"
+# google_analystics_tracking_id: 'UA-46778883-1'
