--- a/_data/publications.yaml
+++ b/_data/publications.yaml
@@ -1,175 +1,57 @@
 papers:
 
-  - title: "Supernotes: Driving Consensus in Crowd-Sourced Fact-Checking"
-    authors: "Soham De, Michiel A. Bakker, Jay Baxter, <b>Martin Saveski</b>"
-    venue: "Arxiv'24: arXiv preprint. 2024."
-    paper_pdf: "/assets/publications/2024_supernotes/paper.pdf"
-    code: "https://github.com/saveski-lab/supernotes"
+  - title: "Evaluation of Large Language Models via Coupled Token Generation"
+    authors: "<b>Nina Corvelo Benz</b>, Stratis Tsirtsis, Eleni Straitouri, Ivi Chatzi, Ander Artola Velasco, Suhas Thejaswi, and Manuel Gomez-Rodriguez"
+    venue: "ArXiv preprint, 2025."
+    paper_pdf: "https://arxiv.org/pdf/2502.01754"
+    code: "https://github.com/Networks-Learning/coupled-llm-evaluation"
+    selected: y
+    
+  - title: "Human-Alignment Influences the Utility of AI-assisted Decision Making"
+    authors: "<b>Nina Corvelo Benz</b> and Manuel Gomez-Rodriguez"
+    venue: "ArXiv preprint, 2025."
+    paper_pdf: "https://arxiv.org/pdf/2501.14035"
+    code: "https://github.com/Networks-Learning/human-alignment-study"
+    selected: y
+    
+  - title: "Antimicrobial drug recommendation from MALDI-TOF mass spectrometry with statistical guarantees using conformal prediction"
+    authors: "<b>Nina Corvelo Benz<sup>‡</sup></b>, Lucas Miranda<sup>‡</sup>, Dexiong Chen, Karsten Borgwardt, Janko Sattler"
+    venue: "29th Conference on Research in Computational Molecular Biology, 2025"
+    # paper_pdf: "/assets/publications/2024_supernotes/paper.pdf"
+    code: "https://github.com/BorgwardtLab/ConformalAMR"
     selected: y
 
-  - title: "Reranking Social Media Feeds: A Practical Guide for Field Experiments"
-    authors: "Tiziano Piccardi<sup>‡</sup>, <b>Martin Saveski<sup>‡</sup></b>, Chenyan Jia<sup>‡</sup>, Jeffrey Hancock, Jeanne L Tsai, Michael S Bernstein"
-    venue: "Arxiv'24: arXiv preprint. 2024."
-    paper_pdf: "/assets/publications/2024_feedwizard/paper.pdf"
-    code: "https://github.com/StanfordHCI/FeedMonitor"
+  - title: "Counterfactual Token Generation in Large Language Models"
+    authors: "Ivi Chatzi<sup>‡</sup>, <b>Nina Corvelo Benz<sup>‡</sup></b>, Eleni Straitouri<sup>‡</sup>, Stratis Tsirtsis<sup>‡</sup>, Manuel Gomez-Rodriguez"
+    venue: "4th Conference on Causal Learning and Reasoning, 2025"
+    paper_pdf: "https://arxiv.org/abs/2409.17027"
+    code: "https://github.com/Networks-Learning/counterfactual-llms"
     selected: y
 
-  - title: "Off-policy Evaluation Beyond Overlap: Sharp Partial Identification Under Smoothness"
-    authors: "Samir Khan, <b>Martin Saveski</b>, Johan Ugander"
-    venue: "ICML'24: International Conference on Machine Learning. 2024."
-    paper_pdf: "/assets/publications/2024_ope_lipschitz/paper.pdf"
-    code: "https://github.com/skhan1998/lipschitz-ope"
+  - title: "Matchings, Predictions and Counterfactual Harm in Refugee Resettlement Processes"
+    authors: "Seungeon Lee, <b>Nina Corvelo Benz</b>, Suhas Thejaswi, Manuel Gomez-Rodriguez"
+    venue: "4th Conference on Causal Learning and Reasoning, 2025"
+    paper_pdf: "https://arxiv.org/pdf/2407.13052"
+    code: "https://github.com/Networks-Learning/counterfactually-harmless-matching"
     selected: y
 
-  - title: "Counterfactual Evaluation of Peer-Review Assignment Policies"
-    authors: "<b>Martin Saveski</b>, Steven Jecmen, Nihar B. Shah, Johan Ugander"
-    venue: "NeurIPS'23: Advances in Neural Information Processing Systems (Spotlight). 2023."
-    paper_pdf: "/assets/publications/2023_peer_review/paper.pdf"
-    code: "https://github.com/msaveski/counterfactual-peer-review"
+  - title: "Human-Aligned Calibration for AI-Assisted Decision Making"
+    authors: "<b>Nina Corvelo Benz</b> and Manuel Gomez-Rodriguez"
+    venue: "37th Conference on Neural Information Processing Systems, 2023"
+    paper_pdf: "https://proceedings.neurips.cc/paper_files/paper/2023/file/2f1d1196426ba84f47d115cac3dcb9d8-Paper-Conference.pdf"
+    code: "https://github.com/Networks-Learning/human-aligned-calibration"
     selected: y
 
-  - title: "Embedding Societal Values into Social Media Algorithms"
-    authors: "Michael Bernstein, Angèle Christin, Jeffrey Hancock, Tatsunori Hashimoto, Chenyan Jia, Michelle S. Lam, Nicole Meister, Nathaniel Persily, Tiziano Piccardi, <b>Martin Saveski</b>, Jeanne Tsai, Johan Ugander, Chunchen Xu"
-    venue: "JOTS'23: Journal of Online Trust and Safety. 2023."
-    paper_pdf: "/assets/publications/2023_embedding_societal_values/paper.pdf"
-    selected: y    
-
-  - title: "Engaging Politically Diverse Audiences on Social Media"
-    authors: "<b>Martin Saveski</b>, Doug Beeferman, David McClure, Deb Roy"
-    venue: "ICWSM'22: International AAAI Conference on Web and Social Media. 2022."
-    paper_pdf: "/assets/publications/2022_newsbridge/paper.pdf"
+  - title: "Counterfactual Inference of Second Opinions"
+    authors: "<b>Nina Corvelo Benz</b> and Manuel Gomez-Rodriguez"
+    venue: "38th Conference on Uncertainty in Artificial Intelligence, 2022"
+    paper_pdf: "https://proceedings.mlr.press/v180/corvelo-benz22a/corvelo-benz22a.pdf"
+    code: "https://github.com/Networks-Learning/cfact-inference-second-opinions"
     selected: y
 
-  - title: "Perspective-taking to Reduce Affective Polarization on Social Media"
-    authors: "<b>Martin Saveski<sup>‡</sup></b>, Nabeel Gillani<sup>‡</sup>, Ann Yuan, Prashanth Vijayaraghavan, Deb Roy"
-    venue: "ICWSM'22: International AAAI Conference on Web and Social Media. 2022."
-    paper_pdf: "/assets/publications/2022_flipfeed/paper.pdf"
-    code: "https://github.com/msaveski/twitter_perspective_taking"
-    data: "https://github.com/msaveski/twitter_perspective_taking"
-    selected: y
-
-  - title: "The Structure of Toxic Conversations on Twitter"
-    authors: "<b>Martin Saveski</b>, Brandon Roy, Deb Roy"
-    venue: "WWW'21: The Web Conference 2021"
-    paper_pdf: "/assets/publications/2021_dtox/paper.pdf"
-    code: "https://github.com/msaveski/toxic_conversation_structure"
-    data: "https://doi.org/10.7910/DVN/TRWPVB"
-    video: "https://www.youtube.com/watch?v=JLkUgxH92pE"
-    selected: y
-
-  - title: "Social Catalysts: Characterizing People Who Spark Conversations Among Others"
-    authors: "<b>Martin Saveski</b>, Farshad Kooti, Sylvia Morelli Vitousek, Carlos Diuk, Bryce Bartlett, Lada Adamic"
-    venue: "CSCW'21: Conference on Computer-Supported Cooperative Work and Social Computing"
-    paper_pdf: "/assets/publications/2021_social_catalysts/paper.pdf"
-    code: "https://github.com/facebookresearch/social-catalysts"
-    selected: y
-
-  - title: "Balanced Influence Maximization in the Presence of Homophily"
-    authors: "Md Sanzeed Anwar, <b>Martin Saveski</b>, Deb Roy"
-    venue: "WSDM'21: International Conference on Web Search and Data Mining"
-    paper_pdf: "/assets/publications/2021_balanced_inf_max/paper.pdf"
-    code: "https://github.com/sanzeed/balanced_influence_maximization"
-    data: "https://github.com/sanzeed/balanced_influence_maximization"
-    selected: n
-
-  - title: "Algorithmic and Human Prediction of Success in Human Collaboration From Visual Features"
-    authors: "<b>Martin Saveski<sup>‡</sup></b>, Edmond Awad<sup>‡</sup>, Iyad Rahwan, Manuel Cebrian"
-    venue: "Nature Scientific Reports. 2021"
-    paper_pdf: "/assets/publications/2021_esc_the_room/paper.pdf"
-    code: "https://doi.org/10.7910/DVN/HDT2RN"
-    data: "https://doi.org/10.7910/DVN/HDT2RN"
-    selected: n
-
-  - title: "Testing for Arbitrary Interference on Experimentation Platforms"
-    authors: "Jean Pouget-Abadie, Guillaume Saint-Jacques<sup>‡</sup>, <b>Martin Saveski<sup>‡</sup></b>, Weitao Duan, Souvik Ghosh, Ya Xu, Edo Airoldi"
-    venue: "Biometrika. 2019."
-    paper_pdf: "/assets/publications/2019_biometrika/paper.pdf"
-    selected: n
-
-  - title: "Observational Causal Inference Using Network Information"
-    authors: "Yan Leng, <b>Martin Saveski</b>, Alex ‘Sandy’ Pentland, Dean Eckles"
-    venue: "NeurIPS'19, Workshop on Graph Representation Learning. 2019."
-    selected: n
-
-  - title: "Me, My Echo Chamber, and I: Introspection on Social Media Polarization"
-    authors: "Nabeel Gillani, Ann Yuan, <b>Martin Saveski</b>, Soroush Vosoughi, Deb Roy"
-    venue: "WWW'18: International Conference on the World Wide Web. 2018. <b>(Honarable mention)</b>"
-    paper_pdf: "/assets/publications/2018_social_mirror/paper.pdf"
-    video: "https://drive.google.com/file/d/0B9-P1m1JkZA7UTRuMUFWcTNueXM/view"
-    selected: y
-
-  - title: "Detecting Network Effects: Randomizing Over Randomized Experiments"
-    authors: "<b>Martin Saveski<sup>‡</sup></b>, Jean Pouget-Abadie<sup>‡</sup>, Guillaume Saint-Jacques, Weitao Duan, Souvik Ghosh, Ya Xu, Edo Airoldi"
-    venue: "KDD'17: International Conference on Knowledge Discovery and Data Mining. 2017. (Research Track)"
-    paper_pdf: "/assets/publications/2017_detecting_network_effects/paper.pdf"
-    slides: "/assets/publications/2017_detecting_network_effects/slides.pdf"
-    video: "https://www.youtube.com/watch?v=1v5_CzdRVAc"
-    selected: y
-
-  - title: "Human Atlas: A Tool for Mapping Social Networks"
-    authors: "<b>Martin Saveski</b>, Eric Chu, Soroush Vosoughi, Deb Roy"
-    venue: "WWW'16: International Conference on the World Wide Web. 2016. (Demo)"
-    paper_pdf: "/assets/publications/2016_human_atlas/paper.pdf"
-    video: "https://www.youtube.com/watch?v=OQOUHkJdA-U"
-    selected: n
-
-  - title: "Topic Modeling in Twitter: Aggregating Tweets by Conversations"
-    authors: "David Alvarez-Melis<sup>‡</sup>, <b>Martin Saveski<sup>‡</sup></b>"
-    venue: "ICWSM'16: International AAAI Conference on Web and Social Media. 2016. (Short Paper)"
-    paper_pdf: "/assets/publications/2016_twitter_topic_modeling/paper.pdf"
-    poster: "/assets/publications/2016_twitter_topic_modeling/poster.pdf"
-    selected: n
-
-  - title: "Tracking the Yak: An Empirical Study of Yik Yak"
-    authors: "<b>Martin Saveski</b>, Sophie Chou, Deb Roy."
-    venue: "ICWSM'16: International AAAI Conference on Web and Social Media. 2016. (Short Paper)"
-    paper_pdf: "/assets/publications/2016_yikyak/paper.pdf"
-    poster: "/assets/publications/2016_yikyak/poster.pdf"
-    selected: n
-
-  - title: "One-Pass Ranking Models for Low-Latency Product Recommendations"
-    authors: "Antonino Freno, <b>Martin Saveski</b>, Rodolphe Jenatton, Cédric Archambeau"
-    venue: "KDD'15: International Conference on Knowledge Discovery and Data Mining. 2015. (Industry Track)"
-    paper_pdf: "/assets/publications/2015_one_pass_ranking_models/paper.pdf"
-    poster: "/assets/publications/2015_one_pass_ranking_models/poster.pdf"
-    slides: "/assets/publications/2015_one_pass_ranking_models/slides.pdf"
-    selected: y
-
-  - title: "Item Cold-Start Recommendations: Learning Local Collective Embeddings"
-    authors: "<b>Martin Saveski</b>, Amin Mantrach."
-    venue: "RecSys'14, ACM Conference Series on Recommender Systems. 2014."
-    paper_pdf: "/assets/publications/2014_item_cold_start/paper.pdf"
-    slides: "/assets/publications/2014_item_cold_start/slides.pdf"
-    code: "https://github.com/msaveski/LCE"
-    selected: y
-
-  - title: "The Geography of Online News Engagement"
-    authors: "<b>Martin Saveski</b>, Daniele Quercia, Amin Mantrach"
-    venue: "Socinfo'14: International Conference on Social Informatics. 2014."
-    paper_pdf: "/assets/publications/2014_geography_of_news/paper.pdf"
-    selected: n
-
-  - title: "Joint semi-supervised Learning of Hidden Conditional Random Fields and Hidden Markov Models"
-    authors: "Yann Soullard, <b>Martin Saveski</b>, Thierry Artières"
-    venue: "Pattern Recognition Letters. 2013."
-    paper_pdf: "/assets/publications/2014_joint_semi_supervised_learning/paper.pdf"
-    selected: n
-
-  - title: "Web Services for Stream Mining: A Stream-Based Active Learning Use Case"
-    authors: "<b>Martin Saveski</b>, Miha Grčar"
-    venue: "ECML'11, Workshop on Planning to Learn and Service-Oriented Knowledge Discovery. 2011."
-    paper_pdf: "/assets/publications/2011_active_learning/paper.pdf"
-    selected: n
-
-  - title: "Automatic Construction of Wordnets by Using Machine Translation and Language Modeling"
-    authors: "<b>Martin Saveski</b>, Igor Trajkovski"
-    venue: "In Proceedings of Seventh Language Technologies Conference. 2010."
-    paper_pdf: "/assets/publications/2010_wordnet_construction/paper.pdf"
-    slides: "/assets/publications/2010_wordnet_construction/slides.pdf"
-    selected: n
-
-  - title: "Development of an English-Macedonian Machine Readable Dictionary by Using Parallel Corpora"
-    authors: "<b>Martin Saveski</b>, Igor Trajkovski"
-    venue: "Proceedings of ICT Innovations Conference. 2010."
-    paper_pdf: "/assets/publications/2010_machine_readable_dictionaries/paper.pdf"
+  - title: "Call admission problems on trees"
+    authors: "Hans-Joachim Böckenhauer, <b>Nina Corvelo Benz</b>, Dennis Komm (A)"
+    venue: "Theoretical Computer Science, Volume 922, 2022"
+    paper_pdf: "https://www.sciencedirect.com/science/article/pii/S030439752200278X"
+    # code: "https://github.com/Networks-Learning/cfact-inference-second-opinions"
     selected: n
