--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,8 +1,8 @@
 experiences:
-
 - place: "Max-Planck Institute for Software Systems"
-  time: "2021 - Now"
-  title: "Ph.D. Student"
+  time: "2021 - present"
+  title: "Ph.D. Student in Computer Science"
+  subtitle: "Human-Centric Machine Learning"
   category: "school"
 
 - place: "Oracle Labs Switzerland"
