--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -1,5 +1,5 @@
 experiences:
-- place: "Max-Planck Institute for Software Systems"
+- place: "MPI for Software Systems, Germany"
   time: "2021 - present"
   title: "Ph.D. Student in Computer Science"
   subtitle: "Human-Centric Machine Learning"
