--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -7,4 +7,4 @@ profile_pic: "/assets/profile-pics/foto_green.jpg"
 linkedin: "https://www.linkedin.com/in/nina-corvelo-benz"
 github: "https://github.com/ninacobe"
 google_scholar: "https://scholar.google.com/citations?user=7hmCYJYAAAAJ"
-# google_analystics_tracking_id: 'UA-46778883-1'
+google_analystics_tracking_id: 'G-PP60FHFJJ8'
