--- a/_data/experience.yaml
+++ b/_data/experience.yaml
@@ -18,9 +18,9 @@ experiences:
 
 - place: "POSTECH, South Korea"
   time: "Feb-June 2017"
-  title: "Research Assistant"
-  subtitle: "Department of Knowledge Technologies"
-  category: "work"
+  title: "Exchange Program"
+  subtitle: "Computer Science"
+  category: "school"
 
 - place: "ETH Zurich, Switzerland"
   time: "2014 - 2018"
