--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,6 +1,6 @@
 name: "Nina Corvelo Benz"
 title: "Ph.D. Student"
-email: "ninacobe [AT] mpi-sws.org"
+email: "corvelo [AT] biochem.mpg.de"
 profile_pic: "/assets/profile-pics/foto_green.jpg"
 # bsky: "https://bsky.app/profile/msaveski.bsky.social"
 # twitter: "https://twitter.com/msaveski"
