--- a/_data/main_info.yaml
+++ b/_data/main_info.yaml
@@ -1,5 +1,5 @@
 name: "Nina Corvelo Benz"
-title: "Ph.D. Student"
+title: "Postdoc @ Max Planck Institute of Biochemistry"
 email: "corvelo [AT] biochem.mpg.de"
 profile_pic: "/assets/profile-pics/foto_green.jpg"
 # bsky: "https://bsky.app/profile/msaveski.bsky.social"
